<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEventActivity"
    >

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding = "16dp"
                >

        <EditText
            style="@style/Category"
            android:id="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/title_prompt"
            />

        <TextView
            android:id="@+id/quest_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="16dp"
            android:text="@string/date_prompt"
            style="@style/Category"
            />

        <DatePicker
            android:id="@+id/add_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <TextView
            android:id="@+id/quest_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="16dp"
            android:text="@string/time_prompt"
            style="@style/Category"
            />

        <TimePicker
            android:id="@+id/add_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            style="@style/Category"
            android:id="@+id/add_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/city_prompt"
            />

        <EditText
            android:id="@+id/add_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/address_prompt"
            />

        <EditText
            android:id="@+id/add_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="6dp"
            android:ems="10"
            android:inputType="text|textMultiLine"
            android:hint="@string/description_prompt"
            />

        <Button
            android:id="@+id/submit_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/add_event"
            android:onClick="onAddEvent"/>


    </LinearLayout>
    </ScrollView>
</LinearLayout>